--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 :root {
-  background: lightgray;
+  background: white;
+  height: 100%;
+  font-family: "Inter", Helvetica;
+}
 
+body {
+  height: 100%;
+  overflow: hidden;
 }
 
 main {
@@ -11,6 +17,8 @@ main {
   align-items: center;
   justify-content: center;
   margin-top: 100px;
+  width: 100%;
+  height: 100%;
 }
 
 .nav {
@@ -18,7 +26,7 @@ main {
   flex-direction: column;
   height: 100%;
   width: 100%;
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
 
@@ -27,34 +35,111 @@ header {
   left: 0;
   top: 0;
   width: 100%;
-  background: gray;
+  background: white;
   display: flex;
-  text-align: left;
+  flex-direction: row;
+  justify-content: space-between;
   padding-left: 15px;
   padding-right: 10px;
+  border-bottom: solid 7px lightgray;
+
+}
+
+.titleWrapper {
+  display: flex;
+  flex-direction: row;
+  justify-self: flex-start;
+  flex-grow: 1;
 }
 
 h1 {
-  font-family: "Agbalumo";
-  color: white;
-  flex-grow: 5;
+  font-family: "Inter", Helvetica;
+  font-weight: 500;
+  font-size: 2em;
+  color: black;
   padding-left: 10px;
+  letter-spacing: 2px;
+  width: fit-content;
+  text-align: left;
 }
 
-h3 {
-  font-size: 1.3em;
-  font-weight: 700px;
+.logoImg {
+  width: auto;
 }
 
-nav {
-  padding-top: 10px;
-  padding-right: 20px;
+.blackCircleWrapper {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.blackcircle {
+  width: 40px;
+  height: 40px;
+  align-self: center;
+  justify-self: center;
 }
 
 nav button {
+  margin: 0px 5px 0px 5px;
+  height: 2.5em;
+  width: 8em;
+  box-shadow: 5px 5px 5px lightgray;
   font-size: 1em;
+}
+
+.homeButton {
+  background-color: #DADADA;
+}
+
+.loginButton {
+  background-color: #FAB3B3;
+}
+
+.registerButton {
+  background-color: #ff9797
+}
+
+.tagline {
+  font-family: "Inter", Helvetica;
+  font-weight: 700;
+  width: 60%;
+  font-size: 40px;
+  
+}
+
+
+nav {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 20px;
+  justify-self: flex-end;
+  align-self: center;
+  flex-grow: 0.45;
 }
 
 .errorMessage {
   color: red;
+}
+
+.CategoriesList {
+  width: 100%;
+  text-align: left;
+}
+
+.CategoriesList h2 {
+  width: fit-content;
+  margin-left: 7em;
+  margin-bottom: 1.5em;
+  margin-top: none;
+  font-weight: 500;
+  border-bottom: solid 1px black;
+}
+
+.categoriesWrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
